<resources>
    <string name="app_name">Trashure</string>
    <string name="splash_logo">splash logo</string>
    <string name="reduce_title">Reduce</string>
    <string name="desc_onboarding_1">Unused e-goods become e-waste in your house?</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="reuse_title">Reuse</string>
    <string name="desc_onboarding_2">Turn them into treasures with just one click</string>
    <string name="recycle_title">Recycle</string>
    <string name="desc_onboarding_3">Because e-waste should not be a waste</string>
    <string name="finish_text">Finish</string>
    <string name="title">Trashure</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="user">User</string>
    <string name="recycler">Recycler</string>
    <string name="login_title">Login</string>
    <string name="email_address">Email Address</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="email_hint">youremail@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">your password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="username_title">Username</string>
    <string name="username_hint">your username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_collect_device">Collect Device</string>
    <string name="title_profile">Profile</string>
    <string name="welcome">Welcome !</string>
    <string name="registration_success">Register Successfully</string>
    <string name="registration_message">Please login with the account you have created</string>
    <string name="ongoing_title">Ongoing</string>
    <string name="tv_ongoing_model">Iphone 13 Pro</string>
    <string name="tv_ongoing_brand">Brand :</string>
    <string name="tv_ongoing_storage">Storage :</string>
    <string name="tv_ongoing_ram">RAM :</string>
    <string name="tv_ongoing_collector">Category :</string>
    <string name="et_ongoing_brand">Apple</string>
    <string name="et_ongoing_storage">128</string>
    <string name="et_ongoing_ram">6</string>
    <string name="et_ongoing_collector">3</string>
    <string name="tv_ongoing_price">Price :</string>
    <string name="et_ongoing_price">Rp. 6.774.956,43 - Rp. 18.994.316,73</string>
    <string name="tv_ongoing_status">Status :</string>
    <string name="et_ongoing_status">Available</string>
    <string name="dasboard_title">Participate in collecting goods with just one click</string>
    <string name="tv_collect_device">Collect Device</string>
    <string name="history_title">History</string>
    <string name="tv_collect_deviceTitle">Collect your Device !</string>
    <string name="error_empty_section">This section can\'t be empty</string>
    <string name="tv_img_title">Upload your device</string>
    <string name="selected_brand">Selected Brand</string>
    <string name="device_image">Device Image</string>
    <string name="tv_collect_model">Model</string>
    <string name="tv_collect_storage">Storage (GB)</string>
    <string name="tv_collect_ram">RAM (GB)</string>
    <string name="tv_collect_duration">Duration of Use (Years)</string>
    <string name="tv_collect_screen">Screen Size (Inches)</string>
    <string name="et_collect_screenHint">5.4</string>
    <string name="tv_collect_camera">Main Camera (MP)</string>
    <string name="et_collect_cameraHint">12</string>
    <string name="tv_collect_battery">Battery Capacity (mAh)</string>
    <string name="et_collect_batteryHint">2815</string>
    <string name="btn_predict">Predict</string>
    <string name="et_collect_model">Iphone 12 Pro</string>
    <string name="et_collect_durationHint">3</string>
    <string name="tv_predict_deviceTitle">Price Prediction</string>
    <string name="tv_category0">Category 0</string>
    <string name="tv_price1">Rp 0,00 — Rp 2.000.000,00</string>
    <string name="tv_category1">Category 1</string>
    <string name="tv_price2">Rp 2.000.000,00 — Rp 4.000.000,00</string>
    <string name="tv_category2">Category 2</string>
    <string name="tv_price3">Rp 4.000.000,00 — Rp 8.000.000,00</string>
    <string name="tv_price4">Rp 5.000.000,00 — Rp 18.000.000,00</string>
    <string name="tv_predictResult">Predicted Result :</string>
    <string name="tv_categoryResult"></string>
    <string name="tv_priceResult"></string>
    <string name="btn_next">Next</string>
    <string name="tv_category3">Category 3</string>
    <string name="tv_thankyou_title">Congratulations!</string>
    <string name="tv_thankyou_description">You have successfully predict your item</string>
    <string name="btn_okay">Okay</string>
    <string name="tv_profile_title">Profile</string>
    <string name="tv_username_profile">Radithya Javas</string>
    <string name="tv_email_profile">radithyajavas@gmail.com</string>
    <string name="tv_username_title">Username</string>
    <string name="tv_phoneNumber">Phone Number</string>
    <string name="et_phoneNumber">+62 | Insert your phone number</string>
    <string name="tv_province">Province</string>
    <string name="et_province">Insert your province</string>
    <string name="tv_city">City</string>
    <string name="et_city">Insert your city</string>
    <string name="tv_subdistrict">Subdistrict</string>
    <string name="et_subdistrict">Insert your subdistrict</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="tv_language">Language</string>
    <string name="tv_about">About</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_save_profile">Save</string>
    <string name="kategori">"Category "</string>
    <string name="about_trashure">Trashure is your go-to app for transforming unused electronic devices into treasure. Our platform enables you to easily upload your devices, receive a price estimate based on the specifications you provide, and connect with local collectors. We also help you set a reasonable price based on the device you input. Choose from a range of nearby collectors to find the best match. With Trashure, making the most of your old electronics is just a few taps away. Join our community and start turning your unused devices into value today!</string>
    <string name="designed_by">Designed By</string>
    <string name="name_denise">Handaneswari Pramudhyta Imanda</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="name_wisang">Andikha Wisanggeni</string>
    <string name="name_razzi">Razzi Permana Maolana</string>
    <string name="name_toni">Ahmad Fathoni</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="name_rajak">Muhammad Razzaaq Zulkahfi</string>
    <string name="name_radit">Radithya Javas Marchad</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="name_rafi">Rafifadil Salma Putra</string>
    <string name="back_button">Back Button</string>
    <string name="message_logout_confirm">Are you sure want logout?</string>
    <string name="action_cancel">Cancel</string>
</resources>