<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/login_illustration"
        android:layout_width="420dp"
        android:layout_height="370dp"
        android:layout_marginTop="-40dp"
        android:src="@drawable/login_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up_title"
        android:textColor="@color/Primary"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_illustration" />

    <TextView
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/username_title"
        android:textColor="@color/Primary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_title" />

    <com.example.trashure.ui.custom_view.NameEditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/manrope"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="12sp"
        android:translationZ="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_title" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/email_address"
        android:textColor="@color/Primary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_username" />

    <com.example.trashure.ui.custom_view.EmailEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/manrope"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="12sp"
        android:translationZ="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/password"
        android:textColor="@color/Primary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <com.example.trashure.ui.custom_view.PasswordEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/manrope"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="12sp"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_title" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp">

        <TextView
            android:id="@+id/tvAlreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/already_have_an_account"
            android:textColor="@color/DarkGreen" />

        <TextView
            android:id="@+id/tvToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login_title"
            android:textColor="@color/DarkGreen"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:elevation="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>